traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:3: error: not found: value bougerPos
      bougerPos()
      ^TraversalByColumn:4: error: not found: value marquerleSol
      marquerleSol()
      ^