traversal.column.traversalbycolumn.TraversalByColumn.scala.code
  override def run() {

    while(finalPos!=true){
      bougerPos()
      marquerleSol()
    }
  }

  def finalPos():Boolean={
    if(getX()==(getMondeLargeur-1) && getY()==(getMondeHauteur-1)){
      return true
    }
    else{
      return false
    }
  }
  def bouger(){
    if(getY()==getMondeHauteur-1){
      setPos(getX()+1,0)
    }
    else{
      setPos(getX(),getY()+1)
    }
  }

